@@ -1,5 +1,7 @@
-AUX 0001-fix-webkit2gtk-vapi.patch 3475 SHA256 1028e4558c44485cd07332c0da047f6fee8556a19e626c26177ee123feee08ea SHA512 f1b35ca9101441f4dec8b6048f577341139ad2b5be1dc269bd20bc4e32218a59bcbbb2a21bbc6a7115ae64adbee22c8a632eafa7b4614f2cbb0fa2ed19ab6b1f WHIRLPOOL 6e87fddb9d96380a0cf285a1bc8103470ffc99d062e96fb9afb66ab82deb086f1b2a8c73fd0a4bc41767e892fb34b49098010324e85c6ef5ed4164e1dff1b35c
-DIST v2.0.2.tar.gz 725025 SHA256 949262912bc07f8d1ec72dfa1bbeafb0ed1cea992589e1ee5901e0630c714261 SHA512 99d1946d959c64977a35470b3eb67183c0d5643f51d838809c628ffb12964d5bfcb5b82b32f289a0bfcf70e105014f856ebba8b514b3f1ad00b5c2bb551c5dee WHIRLPOOL fb6b91749c0f0d5ba3df620f012d577eeb37278b70b6b825e1eeff0a5634ee48436d4be80391b7ee2310be47a7b1e0decb2fcfeadc86749e927e8a4ac3a0016f
-EBUILD feedreader-2.0.2-r2.ebuild 1528 SHA256 9e16f6893925f3a4bd5a287a0afa05bd347a4a6167d89cdaf875234ef057e47f SHA512 ab76fad3ede9305bf0272201b01dda74ee6a800e403f42d2d3e7db2f11caa8e96454710b04eccceb291c37d5944f0e0e38f41a877c1f22c746b4b6801163ec64 WHIRLPOOL 7cee4393fa1c093f8c865220bdf57bdbccccc0e6c3b7f21c899b244b343185d192bd7ec42c568ddc1846d3a55cba810d1c82705716a55c970794a3489e4f30d7
-MISC ChangeLog 1945 SHA256 8d9de5030c69168dc6ca64c38d9a2641c0456a41b88040fedbc80e4611c9548d SHA512 3fb0b32b6157815810e0f11d9b7f1f2303d2bf84d9caca8d79c10059d7b6a1d936fb86e29ef2a5dbd2519adafc5d8416f4197b1354b0371f7f876b9b3ecbb5a4 WHIRLPOOL 8e4773b659e7b3eb39fd577a6bc725954b0fae56fafa42a520a9aeed82cd2904ee8933fa8b2a5eb8829a8d4e28537ad4ea27374e541039d24fa00b09fdce1870
-MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
+AUX 0001-fix-webkit2gtk-vapi.patch 3475 BLAKE2B eaf78de80ec2a69e49e137bc22cbf13006b1249c9f564ed5be37795e33c170077fcde1f9535d00a07faa2e0718fb5f0dabb77f5d6c80924ea9d593faedb258e3 SHA512 f1b35ca9101441f4dec8b6048f577341139ad2b5be1dc269bd20bc4e32218a59bcbbb2a21bbc6a7115ae64adbee22c8a632eafa7b4614f2cbb0fa2ed19ab6b1f
+DIST v2.0.2.tar.gz 725025 BLAKE2B e1adb64d2160af1c0046c89e608507df7520cd73ebee2446f6e95cbbeb09b2ca1ebc23f3a6f02d234e1b2402d64661dd6df8bd3d634c5c8963d1e7cd9d325e04 SHA512 99d1946d959c64977a35470b3eb67183c0d5643f51d838809c628ffb12964d5bfcb5b82b32f289a0bfcf70e105014f856ebba8b514b3f1ad00b5c2bb551c5dee
+DIST v2.3.0.tar.gz 573678 BLAKE2B aa0a14ac226394894fa8654268850d3aaede1a964c77702f128cafd8097e05851711c16fad3323738a46d05e1f7d8d15f0c689a2bf75e67bdf2c8bfd416233a2 SHA512 eedb2e17a6053c7142d7e7994f3329a35c2de3ceac5691abcb59ffb5f9475e7b05f00e2606180566b9d4a09a32715038a0df6d680200a8cd2fcfe7239fa807e2
+EBUILD feedreader-2.0.2-r2.ebuild 1528 BLAKE2B 2809bb2c4f8256b63f0c6a2a59ebc66f1c81da270238af30506f33e682c6043b791db830802d9df9403ad7d4c7381528261fa6753944e0dad778fdeb7491340b SHA512 ab76fad3ede9305bf0272201b01dda74ee6a800e403f42d2d3e7db2f11caa8e96454710b04eccceb291c37d5944f0e0e38f41a877c1f22c746b4b6801163ec64
+EBUILD feedreader-2.3.0.ebuild 1171 BLAKE2B 347b587a438f006a17740c32de25a7b9153772402bfbfd532fe9404c8793cf620e15b09bee20aa85eb9a086689d97fc7bfd923da68f09a84a3b8dfebcadf1484 SHA512 ca0c42d8f3c481eb5bba1f1adf4a92ed7d0feef27c606026bcca5d1c33f1ab62214ac5b92b489b4d90149ab263640474d9a585b0437c7863b03f2603ddcabfb8
+MISC ChangeLog 2111 BLAKE2B 3dfae5d25603f5d593133fb1713e02d553dfef71299c43cca70d3210584ee4b907b89c79820563564f5a800c438c743bdb50a1c4b79bd337d0a9323bbde0cafe SHA512 220cc3191ffa8cb68f03a531206f7fdf5105d5457e91beda3f0ca0412a6824b2bb0e736e9965983e7a652bc3fd9c647afbda4bceb40fc006287a57b07f83cce6
+MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
